--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/yangyang.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>陽陽儀器 - 提供專業的醫療儀器與各式電療貼片</title>
     <meta name="description" content="我們提供各式專業的醫療儀器產品，可用於復健治療或是瘦身減肥使用的電療器和電療貼片。我們在業界有30年以上的經驗，致力於提供好的產品和服務！">
@@ -13,5 +13,13 @@
   <body>
     <div id="app"></div>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WR69YPW70G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-WR69YPW70G');
+    </script>
   </body>
 </html>
